# ttsimport-bot

./: .dockerignore  .drone.yml  .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
ttsimport-bot/: commands.py  decklangselect.py  main.py  ttsbot.py
ttsimport-discord/: main.py
ttsimport_bot/: commands.py  decklangselect.py  main.py
